part4/todo-manifests/base/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
      - name: broadcaster
        image: yuc217/broadcaster:latest
