part4/todo-manifests/base/todo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: todo-app
  name: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
      - name: todo-frontend
        image: yuc217/todo-frontend:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
        readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 3000
