part4/todo-manifests/base/nats-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  # namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:latest
        ports:
        - containerPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: todo-app
spec:
  selector:
    app: nats
  ports:
  - port: 4222
    targetPort: 4222
