part4/todo-manifests/base/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  # namespace: todo-app
  name: todo-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
